--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
 
     <div id = "notepad_window" class = "window">
+        <div class = "grab_bar"></div>
         <div id = "notepad">
             
         </div>
     </div>
     <div id = "squeaker_window" class = "window">
-        <div id = "sqeaker">  
-
+        <div class = "grab_bar"></div>
+        <div id = "squeaker">  
         </div>
     </div>
 
