fuck fuck fuck fuck fuckf fuck (added some things in the thing))

--- a/index.html
+++ b/index.html
@@ -11,13 +11,27 @@
 <body>
 
     <div id = "notepad_window" class = "window">
-        <div class = "grab_bar"></div>
+        <div class = "grab_bar">
+            <h2>WritePad--</h2>
+            <image X_image>
+        </div>
         <div id = "notepad">
-            
+            <div id = "objective_1" class = "objective">
+                <div class = "objective_title">Objective1Title</div>
+            </div>
+            <div id = "objective_2" class = "objective">
+                <div class = "objective_title">Objective2Title</div>
+            </div>
+            <div id = "objective_3" class = "objective">
+                <div class = "objective_title">Objective3Title</div>
+            </div>
         </div>
     </div>
     <div id = "squeaker_window" class = "window">
-        <div class = "grab_bar"></div>
+        <div class = "grab_bar">
+            <h2>Squeaker</h2>
+            <image X_image>
+        </div>
         <div id = "squeaker">  
         </div>
     </div>
