updated website for jonah

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Squeaker</title>
-    <link rel="stylesheet" href="./stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 
 <body>
@@ -32,13 +32,10 @@
             <h2>Squeaker</h2>
             <image X_image>
         </div>
-        <div id = "squeaker">
-
-            
-
+        <div id = "squeaker">  
         </div>
     </div>
 
 </body>
-<script type="module" src="scripts/squeakFactory.js"></script>
+<script type="Module" src="scripts/main.js"></script>
 </html>
