--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
         </div>
         <div id = "notepad">
             <div id = "objective_1" class = "objective">
-                <div class = "objective_title">Objective1Title</div>
+                <div class = "objective_title"></div>
+                <p>Drag the evidence here</p>
             </div>
             <div id = "objective_2" class = "objective">
-                <div class = "objective_title">Objective2Title</div>
+                <div class = "objective_title"></div>
+                <p>Drag the evidence here</p>
             </div>
             <div id = "objective_3" class = "objective">
-                <div class = "objective_title">Objective3Title</div>
+                <div class = "objective_title"></div>
+                <p>Drag the evidence here</p>
             </div>
         </div>
     </div>
