--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="window">
+    <div>
         <div class="section">
             <div id = "notepad_window" class = "window">
                 <div class = "grab_bar">
