Push push push push push push push push push puush

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         target.appendChild(document.getElementById(data));
 
         if (ev.target == document.getElementById("trash")) {
-            var itemToBeDeleted = document.getElementById(data);
+            let itemToBeDeleted = document.getElementById(data);
             //itemToBeDeleted.parentNode.removeChild(itemToBeDeleted); 
 
             let squeaker = document.getElementById("squeaker");
