--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
                     <div id = "objective_1" class = "objective">
                         <div class = "objective_title"></div>
                         <div class="dropbox" ondrop="drop(event)" ondragover="allowDrop(event)">
-                            
-                            <p id="placeholder">
-                                Drag the evidence here
-                            </p>
-        
+                            Drag the evidence Here
                         </div>
                     </div>
                     <div id = "objective_2" class = "objective">
