Added images and other stuff

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 
-<body onload="timer()">
-
-    <div>
+<body>
+    <div class="main_body">
         <div class="section">
             <div id="notepad_window" class="window">
                 <div class="grab_bar">
                     <h2>WritePad--</h2>
+                    <img src = "images/X.jpg" class = "x">
                 </div>
                 <div id = "notepad">
                     <div id = "objective_1" class = "objective">
@@ -45,13 +45,13 @@
                 <div class="grab_bar">
                     <img src="images/sqeaker_logo.png" height="50px" alt="squeaker logo">
                     <h2>Squeaker</h2>
+                    <img src = "images/X.jpg" class = "x">
                 </div>
                 <div id="squeaker">
                 </div>
             </div>
 
         </div>
-        <div class="section">
             <div id="taskbar" class="taskbar">
                 <div class="dropbox">
                     Start
@@ -63,7 +63,6 @@
                     Timer:
                 </div>
             </div>
-        </div>
     </div>
 
 
