--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="section">
             <div id="notepad_window" class="window">
                 <div class="grab_bar">
-                    <h2>WritePad--</h2>
+                    <h2 id = "notepad_grab_bar">WritePad--</h2>
                     <img src = "images/X.jpg" class = "x">
                 </div>
                 <div id = "notepad">
